@@ -5,6 +5,7 @@
 	(dump_log): Set first_old to the beginning of the list after the dump
 	(do_load): Don't call do_unload
 	(socket_data_cb): Check for hang up first
+	(do_load): Don't call reset_filenames
 
 	* archive.c, Makefile.am: Replace all instances of ximian-config
 	with ximian-setup-tools
